--- a/Ebarter/src/main/resources/application.properties
+++ b/Ebarter/src/main/resources/application.properties
@@ -2,13 +2,12 @@
 #### PORT CONFIG ####
 server.port=8085
 
-#TODO CREATE DATABASE AND MAP DATABASE JPA
-##### MYSQL DATASOURCE ####
-#spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?useSSL=false&&useLegacyDatetimeCode=false&serverTimezone=MST
-#spring.datasource.username=userOne
-#spring.datasource.password=klktudice
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jmx.default-domain=EventTrackerRest
+#### MYSQL DATASOURCE ####
+spring.datasource.url=jdbc:mysql://localhost:3306/ebarterdb?useSSL=false&&useLegacyDatetimeCode=false&serverTimezone=MST
+spring.datasource.username=ebarter
+spring.datasource.password=ebarterpass
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jmx.default-domain=Ebarter
 
 #### LOGGING ####
 ##### Set to WARN for fewer log messages
@@ -27,4 +26,3 @@ spring.datasource.dbcp2.min-evictable-idle-time-millis=1000
 spring.datasource.dbcp2.min-idle=8
 spring.datasource.dbcp2.time-between-eviction-runs-millis=1
 
-spring.jmx.default-domain=FinalProject
