added spring security for register

--- a/Ebarter/src/main/resources/application.properties
+++ b/Ebarter/src/main/resources/application.properties
@@ -11,8 +11,9 @@ spring.jmx.default-domain=Ebarter
 
 #### LOGGING ####
 ##### Set to WARN for fewer log messages
-logging.level.root=ERROR
-logging.level.org.springframework.web=ERROR
+logging.level.root=info
+logging.level.org.springframework.web=debug
+logging.level.org.springframework=debug
 logging.level.org.hibernate.SQL=ERROR
 logging.level.org.hibernate.type=ERROR
 spring.jpa.show-sql=true
