--- a/Ebarter/build.gradle
+++ b/Ebarter/build.gradle
@@ -19,4 +19,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'	
+	compile('org.springframework.boot:spring-boot-starter-security')
+    implementation ('org.springframework.boot:spring-boot-starter-tomcat')
+	compile 'org.junit.jupiter:junit-jupiter-api:5.0.1'
+	testCompile('org.apiguardian:apiguardian-api:1.0.0')
+	testRuntime('org.junit.jupiter:junit-jupiter-engine:5.0.1',
+            'org.junit.vintage:junit-vintage-engine:4.12.1',
+            'org.junit.platform:junit-platform-launcher:1.0.1',
+            'org.junit.platform:junit-platform-runner:1.0.1')
 }
