--- a/Angular/eBarter/package.json
+++ b/Angular/eBarter/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "popper.js": "^1.15.0",
+    "react-awesome-button": "^6.1.0",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
