--- a/Ebarter/src/main/resources/application.properties
+++ b/Ebarter/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ebarterdb?useSSL=false&&useLeg
 spring.datasource.username=ebarter
 spring.datasource.password=ebarterpass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jmx.default-domain=Ebarter
+spring.jmx.default-domain=EbarterApplication
 
 #### LOGGING ####
 ##### Set to WARN for fewer log messages
